# svetovid-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
src/svetovid/: __init__.py  connection.py  server.py
src/svetovid/tools/: __init__.py  perception.py  state.py
