[project]
name = "svetovid-mcp"
version = "0.1.0"
description = "An MCP server that lets an agent see and edit video inside DaVinci Resolve Studio."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "hello-emrah" }]
keywords = ["mcp", "davinci-resolve", "video-editing", "ai", "agent"]
dependencies = [
    "mcp[cli]>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/hello-emrah/svetovid-mcp"

[project.scripts]
svetovid-mcp = "svetovid.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/svetovid"]
